RESOLVED FIXED286517
Unified PDF doesn't build with ENABLE(REVEAL) or ENABLE(DRAG_SUPPORT) off
https://bugs.webkit.org/show_bug.cgi?id=286517
Summary Unified PDF doesn't build with ENABLE(REVEAL) or ENABLE(DRAG_SUPPORT) off
Tim Horton
Reported 2025-01-24 19:00:34 PST
Unified PDF doesn't build with ENABLE(REVEAL) or ENABLE(DRAG_SUPPORT) off
Attachments
Tim Horton
Comment 1 2025-01-24 19:00:35 PST
Tim Horton
Comment 2 2025-01-24 19:03:17 PST
EWS
Comment 3 2025-01-24 20:30:05 PST
Committed 289378@main (37b9a8a208fd): <https://commits.webkit.org/289378@main> Reviewed commits have been landed. Closing PR #39535 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.