Unified PDF doesn't build with ENABLE(REVEAL) or ENABLE(DRAG_SUPPORT) off https://bugs.webkit.org/show_bug.cgi?id=286517 rdar://143588122

Reviewed by Richard Robinson, Wenson Hsieh, Aditya Keerthi, Simon Fraser, and Abrar Rahman Protyasha.

Fix a few tiny mistakes:

* Source/WebKit/UIProcess/ios/WebPageProxyIOS.mm:
This PDF code was accidentally inside a dragging related #ifdef.

* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/UnifiedPDFPlugin.mm:
(WebKit::UnifiedPDFPlugin::textForImmediateActionHitTestAtPoint):
This code assumed ENABLE(REVEAL) was always true.

* Tools/TestWebKitAPI/Tests/WebKitCocoa/UnifiedPDFTests.mm:
This code didn't include the definition of UIWKDocumentContext and friends.

Canonical link: https://commits.webkit.org/289378@main