Source/WebKit/UIProcess/ios/WebPageProxyIOS.mm
@@ -1736,13 +1736,13 @@ void WebPageProxy::setPromisedDataForImage(IPC::Connection&, const String&, Shar
     notImplemented();
 }
 
+#endif
+
 #if ENABLE(PDF_PLUGIN)
 void WebPageProxy::pluginDidInstallPDFDocument(double initialScale)
 {
     protectedPageClient()->pluginDidInstallPDFDocument(initialScale);
 }
-#endif
-
 #endif
 
 #if PLATFORM(IOS_FAMILY)
